# mcp-server

./: LICENSE  README.md  publish.sh  pyproject.toml
sigmodx_mcp/: __init__.py  server.py
sigmodx_mcp/tools/: hash_inputs.py  log_decision.py  reliability.py  verify.py
